started admin panel

--- a/app/Resources/views/Game/players.html.twig
+++ b/app/Resources/views/Game/players.html.twig
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-sm-3">
                         <p><strong>{{ player.fullname }}</strong></p>
-                        <p><strong>Tags:</strong> {{ player.tags }}</p>
+                        <p><strong>Tags:</strong> {{ player.humansTagged }}</p>
                         <p><strong>Clan:</strong> {{ player.clan | default('none') }}</p>
                     </div>
                     <div class="col-sm-7">
