--- a/app/Resources/views/message.html.twig
+++ b/app/Resources/views/message.html.twig
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="vertical-space"></div>
         <div class="row">
-            <div class="col-md-12 text-center bg-{{ message.type }}">
+            <div class="col-md-12 text-center alert alert-{{ message.type }}">
                 {{ message.body | raw }}
             </div>
         </div>
