--- a/app/Resources/views/Game/profile.html.twig
+++ b/app/Resources/views/Game/profile.html.twig
@@ -16,6 +16,7 @@
 
     <div class="container">
         <div class="vertical-space"></div>
+        <div class="vertical-space"></div>
 
         <div class="row">
             <div class="col-sm-offset-2 col-sm-4 bg-{{ profile.team }}">
