--- a/app/Resources/views/Game/register_infection.html.twig
+++ b/app/Resources/views/Game/register_infection.html.twig
@@ -25,13 +25,15 @@
 
         {% if errors is defined %}
             <div id="errors">
-                {% for error in errors %}
-                    <div class="row">
-                        <div class="col-md-4 col-md-offset-4">
-                            <p class="bg-warning">{{ error }}</p>
-                        </div>
+                <div class="row">
+                    <div class="col-md-4 col-md-offset-4 alert alert-danger">
+                        <ul class="list-unstyled">
+                            {% for error in errors %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
                     </div>
-                {% endfor %}
+                </div>
             </div>
         {% endif %}
 
