--- a/app/Resources/views/Game/antivirus.html.twig
+++ b/app/Resources/views/Game/antivirus.html.twig
@@ -2,7 +2,7 @@
 {% import '::components.html.twig' as components %}
 
 {% block title %}
-    Register Infection | {{ parent() }}
+    Antivirus | {{ parent() }}
 {% endblock %}
 
 {% block body_def %}
@@ -19,8 +19,17 @@
 
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>Register Infection</h2>
-                Have an antivirus? <a href="{{ path('web_antivirus') }}">Click here!</a>
+                <h2>Antivirus Code</h2>
+                Antivirus codes may not be used between 5PM and 11PM, and must be used before 2AM on Friday.
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                {% if valid_time == true %}
+                    <span style="color: green;">You may use an antivirus at this time.</span>
+                {% else %}
+                    <span style="color: red;">You may not use an antivirus at this time.</span>
+                {% endif %}
             </div>
         </div>
 
@@ -40,14 +49,12 @@
 
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <form method="post" action="{{ path('web_register_infection_submit') }}">
-                    <input type="hidden" name="_token" value="{{ csrf_token('register_infection') }}">
-                    <input type="hidden" name="latitude" id="latitude">
-                    <input type="hidden" name="longitude" id="longitude">
+                <form method="post" action="{#{{ path('web_antivirus_submit') }}#}">
+                    <input type="hidden" name="_token" value="{{ csrf_token('antivirus') }}">
                     <div class="form-group">
-                        <label for="human_id">Human ID</label>
-                        <input type="text" class="form-control" id="human_id" name="human" placeholder="human id"
-                               {% if human is defined %}value="{{ human }}"{% endif %}>
+                        <label for="antivirus_id">Antivirus Code</label>
+                        <input type="text" class="form-control" id="antivirus_id" name="antivirus" placeholder="antivirus code"
+                               {% if antivirus is defined %}value="{{ antivirus }}"{% endif %}>
                     </div>
                     <div class="form-group">
                         <label for="zombie_id">Zombie ID</label>
@@ -56,27 +63,7 @@
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
-                <p class="text-muted">Location: <span id="loc-status">NOT SENDING</span></p>
             </div>
         </div>
     </div>
-{% endblock %}
-
-{% block body_javascripts %}
-    {{ parent() }}
-
-    <script type="text/javascript">
-        $(function() {
-            $(function() {
-                $("#latitude").val(null);
-                $("#longitude").val(null);
-            });
-
-            navigator.geolocation.getCurrentPosition(function(pos) {
-                $('#latitude').val(pos.coords.latitude);
-                $('#longitude').val(pos.coords.longitude);
-                $('#loc-status').html("OK");
-            }, function() {}, {enableHighAccuracy: true, timeout: Infinity, maximumAge: 0});
-        });
-    </script>
 {% endblock %}
