--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -77,6 +77,7 @@
                                 {{ components.nav_internal_link('missions', path('web_admin_missions'), 'Missions', selected2) }}
 
                                 {% if is_granted('ROLE_ADMIN') %}
+                                    {{ components.nav_internal_link('antiviruses', path('web_admin_antiviruses'), 'Antiviruses', selected2) }}
                                     {{ components.nav_internal_link('rulesets', path('web_admin_rulesets'), 'Rulesets', selected2) }}
                                 {% endif %}
                             </ul>
