--- a/app/Resources/views/Game/infections.html.twig
+++ b/app/Resources/views/Game/infections.html.twig
@@ -16,6 +16,7 @@
 
     <div class="container">
         <div class="vertical-space"></div>
+        <div class="vertical-space"></div>
         <div class="row">
             <div id="tag-list" class="col-md-12 text-center">
                 {% for infection in infections if infection.zombie != null %}
