--- a/app/Resources/views/Admin/print_options.html.twig
+++ b/app/Resources/views/Admin/print_options.html.twig
@@ -33,7 +33,7 @@
                     </li>
                     <li>
                         <a href="{{ path('web_admin_print_mark', {'token': csrf_token('print_mark')}) }}">
-                            Mark all as printed
+                            Mark active users as printed
                         </a>
                     </li>
                 </ul>
