--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -37,7 +37,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             {# TODO: Implement stats pages #}
-                            {{ components.nav_internal_link('spread', '#', 'Spread', selected2) }}
+                            {{ components.nav_internal_link('spread', path('web_stats_spread'), 'Spread', selected2) }}
                             {{ components.nav_internal_link('map', path('web_stats_map'),'Map', selected2) }}
                         </ul>
                     </li>
