--- a/app/Resources/views/Game/spread.html.twig
+++ b/app/Resources/views/Game/spread.html.twig
@@ -12,7 +12,7 @@
 {% block body %}
     {{ parent() }}
 
-    {{ components.navbar('fixed-top', 'stats', 'map') }}
+    {{ components.navbar('fixed-top', 'stats', 'spread') }}
 
     <div class="container">
         <div class="vertical-space"></div>
