--- a/app/Resources/views/Game/map.html.twig
+++ b/app/Resources/views/Game/map.html.twig
@@ -45,7 +45,7 @@
             {% for infection in infections %}
                 {% if infection.latitude is defined and infection.longitude is defined
                 and infection.latitude is not null and infection.longitude is not null %}
-                    {location: new google.maps.LatLng({{ infection.latitude }}, {{ infection.longitude }}), weight: 1}
+                    {location: new google.maps.LatLng({{ infection.latitude }}, {{ infection.longitude }}), weight: 1},
                 {% endif %}
             {% endfor %}
         ];
