temporary logo, also prevent players from infecting others after the game has ended

--- a/app/Resources/views/components.html.twig
+++ b/app/Resources/views/components.html.twig
@@ -15,9 +15,9 @@
                 <div class="visible-lg visible-md navbar-brand navbar-brand-centered">
                     <a href="{{ path('web_status') }}">
                         {% if type == "lower" %}
-                            <img class="logo" src="holder.js/150x150" alt="HvZ @ RIT">
+                            <img class="logo" src="{{ asset('assets/images/hvzlogo.png') }}" alt="HvZ @ RIT">
                         {% else %}
-                            <img class="logo" src="holder.js/100x100" alt="HvZ @ RIT">
+                            <img class="logo" src="{{ asset('assets/images/hvzlogo.png') }}" alt="HvZ @ RIT">
                         {% endif %}
                     </a>
                 </div>
