--- a/app/Resources/views/Game/profile.html.twig
+++ b/app/Resources/views/Game/profile.html.twig
@@ -36,7 +36,7 @@
             </div>
             <div class="col-sm-4">
                 <h3 class="hidden-xs">&nbsp;</h3>
-                <p><strong>API Key:</strong> {{ profile.apikey }} <small class="text-muted">(must be activated by an admin)</small></p>
+                <p><strong>API Key:</strong> {{ profile.apikey }}</p>
                 <p><strong>Zombie Id:</strong> {{ profile.zombieId }} <small class="text-muted">(use as a zombie)</small></p>
                 <p><strong>Human Ids:</strong> <small class="text-muted">(give to zombies as a human)</small></p>
                 <ul>
