make qr code a bit clearer

--- a/app/Resources/views/Game/profile.html.twig
+++ b/app/Resources/views/Game/profile.html.twig
@@ -36,8 +36,9 @@
             </div>
             <div class="col-sm-4">
                 <h3 class="hidden-xs">&nbsp;</h3>
-                <p><strong>API Key:</strong> {{ profile.apikey }}</p>
+                <p>API Key (Scan with the app):</p>
                 <img src="{{ qrcode_data_uri(profile.apikey) }}" alt="qr code">
+                <p><strong>API Key:</strong> {{ profile.apikey }}</p>
                 <p><strong>Zombie Id:</strong> {{ profile.zombieId }} <small class="text-muted">(use as a zombie)</small></p>
                 <p><strong>Human Ids:</strong> <small class="text-muted">(give to zombies as a human)</small></p>
                 <ul>
