--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,21 @@
 {% block footer %}
     <div class="footer">
         <div class="container">
-            <p class="text-muted pull-right">Copyright &copy; 2015</p>
+            <div class="row">
+                <div class="col-sm-6">
+                    <a href="https://play.google.com/store/apps/details?id=edu.rit.hvz.android">
+                        <img alt="Android app on Google Play"
+                             src="{{ asset('assets/images/google_play.png') }}" />
+                    </a>
+                    <a href="#">
+                        <img alt="iOS app on the App Store"
+                             src="{{ asset('assets/images/app_store.png') }}" />
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <p class="text-muted pull-right">Copyright &copy; 2015</p>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
