--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,6 +10,9 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#ff7519">
+
+        <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
+        <link rel="icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
     {% endblock %}
 
     <link rel="shortcut icon" type="image/png" href="{{ asset('assets/images/favicon.png') }}">
