use minified versions of bootstrap css

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,8 +19,8 @@
 
     {% block stylesheets %}
         {% stylesheets
-        'assets/bower_components/bootstrap/dist/css/bootstrap.css'
-        'assets/bower_components/bootswatch/cosmo/bootstrap.css'
+        'assets/bower_components/bootstrap/dist/css/bootstrap.min.css'
+        'assets/bower_components/bootswatch/cosmo/bootstrap.min.css'
         'assets/bower_components/snackbarjs/dist/snackbar.min.css'
         'assets/bower_components/snackbarjs/themes-css/material.css'
         'assets/css/app.css'
