display message if there are no missions

--- a/app/Resources/views/Game/missions.html.twig
+++ b/app/Resources/views/Game/missions.html.twig
@@ -20,6 +20,12 @@
                 <ul class="nav nav-pills nav-stacked side-nav">
                     {% for mission in missions %}
                         <li><a href="#mission-{{ loop.index }}">{{ mission.title }}</a></li>
+                    {% else %}
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <h1>There were no missions found</h1>
+                            </div>
+                        </div>
                     {% endfor %}
                 </ul>
             </div>
